# smoltcp-checksum-bench

./: README.md
checksum/: Cargo.toml  README.md
checksum/benches/: checksum.rs
checksum/src/: lib.rs
rp235x-arm/: Cargo.toml  README.md
rp235x-arm/.cargo/: config.toml
rp235x-arm/src/: main.rs
rp235x-riscv/: Cargo.toml  README.md
rp235x-riscv/.cargo/: config.toml
rp235x-riscv/src/: main.rs
