[package]
name = "checksum"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", default-features = false }
byteorder = { version = "1.5.0", default-features = false }
wide = { version = "1.5.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "checksum"
harness = false
